--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>Hello from index.html</h1>
+    <a href="about.html">About</a>
+    <a href="contact-me.html">Contact</a>
   </body>
 </html>
